# dota2-coach-plugin

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
plugins/dota2-coach/: .mcp.json
plugins/dota2-coach/.claude-plugin/: plugin.json
plugins/dota2-coaching/.claude-plugin/: plugin.json
plugins/dota2-coaching/skills/dota2-coaching/: HERO_BENCHMARKS.md  SKILL.md
skills/dota2-coaching/: DEATH_ANALYSIS.md  ROLE_EXPECTATIONS.md
