[project]
name = "dota2-coach-plugin"
version = "1.0.0"
description = "Claude Code plugin for Dota 2 replay analysis with professional coaching methodology"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = [
    "dota2",
    "claude",
    "claude-code",
    "plugin",
    "coaching",
    "esports",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = []

[project.optional-dependencies]
mcp = [
    "mcp-replay-dota2>=1.0.4",
]

[project.urls]
Homepage = "https://github.com/DeepBlueCoding/dota2-coach-plugin"
Repository = "https://github.com/DeepBlueCoding/dota2-coach-plugin"
"Bug Tracker" = "https://github.com/DeepBlueCoding/dota2-coach-plugin/issues"

[dependency-groups]
dev = [
    "commitizen>=4.8.0",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills"]

[tool.hatch.build.targets.sdist]
include = [
    "skills/",
    ".claude-plugin/",
    ".mcp.json",
    "README.md",
    "LICENSE",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:^version",
    "plugins/dota2-coach/.claude-plugin/plugin.json:version",
]
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true

[tool.ruff]
line-length = 120
